fix: makes secret message smaller
When it's too big, it just looks like there's something wrong. By making
it smaller, it appears more discreet.

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
           </div>
         </div>
         <div class="ui center aligned basic segment">
-          <p class='ui secret medium text'>
+          <p class='ui secret small text'>
             <q>
             Between Mount Ego and Mount Fear, lies the Valley of Complicity.
             </q>
           </p>
-          <p class='ui secret medium text'>
+          <p class='ui secret small text'>
             Velamentis aspires to work on the tough stuff—like educating egos and easing fears—to help resolve workplace challenges.  Together, we partner with people to improve organizational life and attain breakthrough results.
           </p>
         </div>
