style: adds padding to brand header
The design was too flush at the top and there wasn't enough padding with
the quote.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
   <body>
     <div class="ui container">
-      <img class='ui centered big image' src='./images/brand.png' />
+      <div class="ui basic segment">
+        <img class='ui centered big image' src='./images/brand.png' />
+      </div>
       <div class="ui text container">
         <div class="ui center aligned basic segment">
           <p>
