style: adds italic to copyright info
It's only conventional, I suppose.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class='ui small text'>
             Made with ❤  in Washington.
           </p>
-          <p class='ui small text'>
+          <p class='ui small italic text'>
             Copyright ©2020 Velamentis, LLC. All rights reserved.
           </p>
         </div>
