feat: adds a little blurb for what you're subscribing to

--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
         </div>
         <div class="ui basic segment">
           <div class="ui centered one column grid">
-            <form class="ui form">
-              <div class="field">
-                <div class="ui action input">
-                  <input type="text" placeholder="email@domain.com" />
-                  <div class="ui submit button">
-                    Subscribe
+            <div class="row">
+              <form class="ui form">
+                <div class="field">
+                  <div class="ui action input">
+                    <input type="text" placeholder="email@domain.com" />
+                    <div class="ui submit button">
+                      Subscribe
+                    </div>
                   </div>
                 </div>
-              </div>
-            </form>
+              </form>
+            </div>
+            <p class="ui small text">
+              For announcements, newsletters, and more.
+            </p>
           </div>
         </div>
         <div class="ui center aligned basic segment">
