--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="ui center aligned basic segment">
           <p class="ui large text">
-            To connect, say hello at <a href="mailto:jen@velamentis.com">jen@velamentis.com</a>.
+            To connect, say hello at <a href="mailto:Peace@Velamentis.com">Peace@Velamentis.com</a>.
           </p>
           <p class='ui small text'>
             Made with ❤  in Washington.
