fix: removes bird icon on Velamentis banner, replaces png with svg
The svg files are smaller and faster to load. Win!

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
   <body>
     <div class="ui container">
-      <div class="ui basic segment">
-        <img class='ui centered big image' src='./images/brand.png' />
-      </div>
+      <img class='ui centered huge image' src='./images/company-banner.svg' />
       <div class="ui text container">
         <div class="ui center aligned basic segment">
           <p>
@@ -37,7 +35,7 @@
           </button>
         </div>
         <div class="ui basic segment">
-          <img class='ui centered small image' src='./images/olive-branch.png' />
+          <img class='ui centered small image' src='./images/olive-branch.svg' />
         </div>
         <div class="ui center aligned basic segment">
           <p class="ui large text">
