feat: adds SurveyMonkey test link to survey button
We'll need to update this again once Jen has the production link. For
now, this will be used for testing.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           </p>
         </div>
         <div class="ui center aligned basic segment">
-          <button class="ui primary massive button">
+          <a href="https://www.surveymonkey.com/r/2ZHSGZN" target="_blank" class="ui primary massive button">
             Take the survey
-          </button>
+          </a>
         </div>
         <div class="ui basic segment">
           <img class='ui centered small image' src='./images/olive-branch.svg' />
