feat: replaces mock subcribe with mailchimp

--- a/index.html
+++ b/index.html
@@ -48,25 +48,30 @@
             Copyright ©2020 Velamentis, LLC. All rights reserved.
           </p>
         </div>
-        <div class="ui basic segment">
-          <div class="ui centered one column grid">
-            <div class="row">
-              <form class="ui form">
-                <div class="field">
+        <!-- mailchimp signup form -->
+        <div class='ui basic segment'>
+          <div class='ui centered one column grid'>
+            <div class='row'>
+              <form action="https://velamentis.us2.list-manage.com/subscribe/post?u=5ac78c619e44c250b654aa47e&amp;id=d92c10b6e1" 
+                    method="post" 
+                    name="mc-embedded-subscribe-form" 
+                    class="validate ui form" 
+                    target="_blank" 
+                    novalidate>
+                <div class='field'>
                   <div class="ui action input">
-                    <input type="text" placeholder="email@domain.com" />
-                    <div class="ui submit button">
-                      Subscribe
-                    </div>
+                    <input type="email" value="" name="EMAIL" placeholder='email@domain.com'>
+                    <input type="submit" value="Subscribe" name="subscribe" class="ui submit button">
                   </div>
                 </div>
               </form>
             </div>
             <p class="ui small text">
-              For announcements, newsletters, and more.
+            For announcements, newsletters, and more.
             </p>
           </div>
         </div>
+        <!--End mc_embed_signup-->
         <div class="ui center aligned basic segment">
           <p class='ui secret small text'>
             <q>
