--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Velamentis</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/main.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RTXB0WL9F4"></script>
   </head>
 
   <body>
@@ -71,7 +72,14 @@
             </p>
           </div>
         </div>
-        <!--End mc_embed_signup-->
+        <!--end mc_embed_signup-->
+        <!-- google analytics -->
+        <script>
+          window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-RTXB0WL9F4');
+        </script>
         <div class="ui center aligned basic segment">
           <p class='ui secret small text'>
             <q>
