chore: renames css style to avoid collision w/ sem-ui

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="ui center aligned basic segment">
           <p class="ui large text">
-            To connect, say hello at <a href="mailto:Peace@Velamentis.com">Peace@Velamentis.com</a>.
+            To connect, say hello at <a href="mailto:Peace@Velamentis.com" class='ui decorated item'>Peace@Velamentis.com</a>.
           </p>
           <p class='ui small text'>
             Made with ❤  in Washington.
