chore: copy edits, fix typos in policy

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <div class='item'>Your views about your workplace culture, positive feedback in the workplace, and workplace performance reviews; and</div>
                         <div class='item'>Whether or not you have experienced a negative workplace incident, and actions taken or not taken by you in response.</div>
                       </div>
+                      <p>
+                        In addition, you will be asked to provide certain demographic information about yourself.  These questions may be skipped in the survey.
+                      </p>
                     </li>
                     <li>
                       Once we have collected the information described above, we may share some or all of it with third parties for various reasons. For example, sharing your information in this way might help us develop our business strategy or build a new product or service.  We may also use your information to send you announcements or promotions about our products or services, or invitations to participate in future surveys. Specifically, we may share your information with:
@@ -339,7 +342,7 @@
                     <li>
                       <p><strong>Category C: Protected classification characteristics under California or federal law.</strong></p>
                       <p>Examples: Age (40 years or older), race, color, ancestry, national origin, citizenship, religion or creed, marital status, medical condition, physical or mental disability, sex (including gender, gender identity, gender expression, pregnancy or childbirth and related medical conditions), sexual orientation, veteran or military status, genetic information (including familial genetic information).</p>
-                      <p>Collected: No.</p>
+                      <p>Collected: Yes.</p>
                     </li>
                     <li>
                       <p><strong>Category D: Commercial information.</strong></p>
@@ -369,7 +372,7 @@
                     <li>
                       <p><strong>Category I: Professional or employment-related information.</strong></p>
                       <p>Examples: Current or past job history or performance evaluations.</p>
-                      <p>Collected: No.</p>
+                      <p>Collected: Yes.</p>
                     </li>
                     <li>
                       <p><strong>Category J: Non-public education information (per the Family Educational Rights and Privacy Act (20 U.S.C. Section 1232g, 34 C.F.R. Part 99)).</strong></p>
@@ -430,7 +433,7 @@
                   <p>Please note that the categories listed above are those defined in the CCPA. This does not mean that all examples of that category of personal information were in fact disclosed, but reflects our good faith belief to the best of our knowledge that some of that information from the applicable category may be and may have been disclosed.</p>
                   <p>When We disclose personal information for a business purpose or a commercial purpose, We enter a contract that describes the purpose and requires the recipient to both keep that personal information confidential and not use it for any purpose except performing the contract.</p>
                   <h2>Sale of Personal Information</h2>
-                  <p>As defined in the CCPA, &quot;sell&quot; and &quot;sale&quot; mean selling, renting, releasing, disclosing, disseminating, making available, transferring, or otherwise communicating orally, in writing, or by electronic or other means, a consumer's personal information by the business to a third party for valuable consideration. This means that We may have received some kind of benefit in return for sharing personal Iinformation, but not necessarily a monetary benefit.</p>
+                  <p>As defined in the CCPA, &quot;sell&quot; and &quot;sale&quot; mean selling, renting, releasing, disclosing, disseminating, making available, transferring, or otherwise communicating orally, in writing, or by electronic or other means, a consumer's personal information by the business to a third party for valuable consideration. This means that We may have received some kind of benefit in return for sharing personal information, but not necessarily a monetary benefit.</p>
                   <p>Please note that the categories listed below are those defined in the CCPA. This does not mean that all examples of that category of personal information were in fact sold, but reflects our good faith belief to the best of our knowledge that some of that information from the applicable category may be and may have been shared for value in return.</p>
                   <p>We may sell and may have sold in the last twelve (12) months the following categories of personal information:</p>
                   <ul>
