chore: adds small padding for policy doc

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
                         <div class='item'>Your views about your workplace culture, positive feedback in the workplace, and workplace performance reviews; and</div>
                         <div class='item'>Whether or not you have experienced a negative workplace incident, and actions taken or not taken by you in response.</div>
                       </div>
+                      <div class='ui hidden small divider'></div>
                       <p>
                         In addition, you will be asked to provide certain demographic information about yourself.  These questions may be skipped in the survey.
                       </p>
+                      <div class='ui hidden small divider'></div>
                     </li>
                     <li>
                       Once we have collected the information described above, we may share some or all of it with third parties for various reasons. For example, sharing your information in this way might help us develop our business strategy or build a new product or service.  We may also use your information to send you announcements or promotions about our products or services, or invitations to participate in future surveys. Specifically, we may share your information with:
