chore: updates with production survey link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="ui basic padded segment">
           <div class="ui one column centered grid">
             <div class='row'>
-              <a href="https://www.surveymonkey.com/r/YCM5BNY" target="_blank" class="ui primary massive button">
+              <a href="https://www.surveymonkey.com/r/CN6LP3F" target="_blank" class="ui primary massive button">
                 Take the survey
               </a>
             </div>
